kotlin/semlang-parser/src/test/semlang/validatorTests/fail/functionBinding5.sem
function myStuff.myFunction(): (Integer, Integer, Integer) -> Integer {
  // Too many arguments
  Integer.plus|(_, _, _)
}
